[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiofastforward"
version = "0.0.0.dev0"
authors = [
  { name="Michal Charemza", email="michal@charemza.name" },
]
description = "Fast-forward time in asyncio Python by patching loop.time, loop.call_later, loop.call_at, and asyncio.sleep"
readme = "README.md"
requires-python = ">=3.5.0"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/michalc/aiofastforward"

[tool.hatch.build]
include = [
  "aiofastforward.py",
]
